# agent_5_eoa

./: LICENSE  agent_5_workshop.ipynb  agent_5_workshop_dspy.ipynb  main.py  pyproject.toml
input/: test_cases.json
output/: test_results_20260103_183853.txt  test_results_20260105_165834.txt  test_results_20260105_172507.txt
src/agent_eoa/: config.py  main.py  test_runner.py  tools.py  workflow.py
