[project]
name = "agent-5-eoa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
    "notebook>=7.5.1",
    "pydantic-settings>=2.12.0",
]
